--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,6 @@
 Source: openmediavault-openvpn
 Section: net
+XB-Plugin-Section: remote
 Priority: optional
 Maintainer: OpenMediaVault Plugin Developers <plugins@omv-extras.org>
 Build-Depends: debhelper (>= 9.0.0)
